[gd_scene load_steps=5 format=2]

[ext_resource path="res://assets/asteroid-5.png" type="Texture" id=1]
[ext_resource path="res://Scripts/Asteroid1.gd" type="Script" id=2]

[sub_resource type="Animation" id=1]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}

[sub_resource type="Animation" id=2]
resource_name = "Spin"
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ 0.0, 90.0, 180.0, 270.0 ]
}

[node name="KinematicBody2D" type="KinematicBody2D"]
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="Sprite"]
autoplay = "Spin"
playback_speed = 0.01
anims/RESET = SubResource( 1 )
anims/Spin = SubResource( 2 )

[node name="Asteroid" type="CollisionPolygon2D" parent="."]
position = Vector2( 1, -1 )
scale = Vector2( 0.07, 0.07 )
polygon = PoolVector2Array( -167, -172, -111, -219, -46, -242, -3, -244, 45, -242, 122, -211, 169, -166, 157, -152, 104, -203, 20, -220, -49, -220, -103, -193, -151, -155 )
one_way_collision = true

[node name="Asteroid2" type="CollisionPolygon2D" parent="."]
position = Vector2( -2.38419e-07, 1 )
rotation = 3.14159
scale = Vector2( 0.07, 0.07 )
polygon = PoolVector2Array( -167, -172, -111, -219, -46, -242, 45, -242, 122, -211, 169, -166, 157, -152, 104, -203, 38, -224, -49, -220, -103, -193, -151, -155 )
one_way_collision = true

[node name="Asteroid3" type="CollisionPolygon2D" parent="."]
position = Vector2( -1, 5.96046e-08 )
rotation = -1.5708
scale = Vector2( 0.07, 0.07 )
polygon = PoolVector2Array( -174.736, -163.159, -111, -219, -46, -242, 45, -242, 122, -211, 182.106, -157.894, 166.316, -143.157, 104, -203, 38, -224, -2.10525, -224.211, -49, -220, -103, -193, -165.263, -150.527 )
one_way_collision = true

[node name="Asteroid4" type="CollisionPolygon2D" parent="."]
position = Vector2( 2, 1 )
rotation = 1.5708
scale = Vector2( 0.07, 0.07 )
polygon = PoolVector2Array( -180.001, -163.157, -111, -219, -46, -242, -8.8889, -246.667, 45, -242, 122, -211, 176.842, -160.001, 162.105, -145.264, 104, -203, 38, -224, -49, -220, -103, -193, -165.264, -151.578 )
one_way_collision = true
